# docs

./: .gitignore  README.md  docs.json  package-lock.json  package.json  production-architecture.md  products.mdx  pyproject.toml  test.mdx
api-reference/: authentication.mdx  introduction.mdx
demo-script/: README.md  call-to-action-section.mdx  context-section.md  context-section.mdx  demo-script.md  demo-script.mdx  differentiators-section.md  differentiators-section.mdx  introduction-section.md  introduction-section.mdx  product-in-action-section.md  product-in-action-section.mdx
flynapse-platform/: account-profile-management.mdx  authentication-onboarding.mdx  chat-user-guide.mdx  copilot-selection-access.mdx  document-viewer.mdx  introduction.mdx  mro-co-pilot.mdx  navigation-interface-guide.mdx  pilot-co-pilot.mdx  settings-role-management.mdx
flynapse-platform/components/: overview.mdx
script-tools/: audio_generation.py  bg_generation.py  image_generator.py  sora_direct.py  sora_exact.py  sora_request.py
